fix vertical stretch on safari (#522)

--- a/src/Card/Card.scss
+++ b/src/Card/Card.scss
@@ -9,4 +9,5 @@
 }
 .stretch-vertically {
   height: 100%;
+  flex-grow: 1;
 }
